test/expected/explain_udc_a4i.out
typedef int A4[4]; explain operator A4()
                  ^
19: error: user-defined conversion operator can not convert to an array; did you mean pointer to array?
